Fix #32 Dark mode scrollbars

--- a/src/style/_color.sass
+++ b/src/style/_color.sass
@@ -198,8 +198,10 @@ body,
 .light-theme
 	background-color: var(--color-bg)
 	color: var(--color-fg)
+	// color-scheme: light
 
 // .dark-theme .enonic
 .dark-theme
 	background-color: var(--darkmode-color-pair-darker-bg)
 	color: var(--darkmode-color-pair-darker-fg)
+	color-scheme: dark // For scrollbars and probably more
